# matlab-nuxt-app

./: # End-to-End Testing Guide.mdc  .clinerc.json  .dockerignore  .dockerignore.api  .editorconfig  .env.algolia.example  .env.example  .env.production  .env.production.template  .env.replit  .env.sentry  .env.sentry.example  .eslintignore  .eslintrc.cjs  .gitattributes  .gitignore  .goosyignore  .npmrc  .prettierignore  .prettierrc  .prettierrc.cjs  .prettierrc.js  .replit  .replitignore  .snyk  .snykrc  .stylelintrc.json  .yamllint.yml  ALGOLIA_SETUP.md  CHANGELOG.md  CODE_OF_CONDUCT.md  COMMIT_MESSAGE.md  CONTRIBUTING.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_FIX_SUMMARY.md  DEV_TYPECHECK.md  DISK_QUOTA_FIX_SUMMARY.md  Dockerfile  Dockerfile.api  ENHANCEMENT_PLAN.md  (+154 more)
.data/: db.sqlite3
.deno_lsp/: log_2025-11-20T16_02_45.786235500+00_00.txt  log_2025-11-21T16_11_43.942651100+00_00.txt
.devcontainer/: Dockerfile  Dockerfile.api  Dockerfile.frontend  README.md  devcontainer.json  docker-compose.yml  health-check.sh  post-create.sh  start-dev.sh  start-servers-tmux.sh  wrap-npm-run.sh  wrap-python-run.sh
.github/: CODEOWNERS  CONTRIBUTING.md  ISSUE_TEMPLATE.md  PROJECT_SETUP_CHECKLIST.md  PULL_REQUEST_TEMPLATE.md  SECRETS_SETUP.md  copilot-instructions.md  dependabot.yml  labeler.yml  reviewer-map.json
app/: router.options.ts
archive/: COMMIT_MESSAGE.md  README.md  list_local.txt  list_min.txt  start.sh
assets/: .gitkeep
chrome-extension/: README.md  manifest.json
components/: AnalyticsAccuracyChart.vue  AnalyticsFeatureImportanceChart.vue  AnalyticsGeographicalChart.vue  AnalyticsTopBrandsChart.vue  AnalyticsYearlyTrendsChart.vue  AnimatedCard.vue  ChartSkeleton.vue  ChartWrapper.vue  DashboardContent.vue  DashboardSidebar.vue  EnhancedCard.vue  EnhancedDataTable.vue  EnhancedNavigation.vue  ErrorBoundary.vue  ImageOptimizationDemo.vue  IntegrationStatus.vue  LanguageSwitcher.vue  LoadingSpinner.vue  MCPServerManager.vue  MagicUIDashboard.vue  MenuOption.vue  ModernCard.vue  ModernHero.vue  ModernSection.vue  NotificationDropdown.vue  NotificationList.vue  OptimizedImage.vue  PerformanceMetrics.vue  SafeComponent.vue  SentryDashboard.vue  SentryHealthMonitor.vue  SentryStatus.vue  SkeletonCard.vue  SkeletonLoader.vue  SkeletonTable.vue  ThemeToggle.vue  TitleSection.vue  ToggleClose.vue  UserPreferencesDialog.vue
composables/: useAccessibility.ts  useAlgoliaImage.ts  useAlgoliaSearch.ts  useAnalytics.ts  useApiConfig.ts  useApiGateway.ts  useApiStatus.ts  useBaseApiCall.ts  useChartConfig.ts  useChartData.ts  useChristmasTheme.ts  useDataExport.ts  useDatasetFilters.ts  useDatasetSearch.ts  useDatasetStatistics.ts  useImagePreloader.ts  useKeyboardShortcuts.ts  useLazyComponent.ts  useMetricsExamples.ts  useMobileImage.ts  useModelComparison.ts  useModelPredictions.ts  useMotion.ts  useNotifications.ts  usePageSeo.ts  usePageSeoWithStructuredData.ts  usePerformance.ts  usePredictionHistory.ts  usePredictionValidation.ts  useRealTimeUpdates.ts  useResponsive.ts  useRetry.ts  useSafeAsync.ts  useSafeComponent.ts  useSentryApi.ts  useSentryErrorFilter.ts  useSentryHealth.ts  useSentryLogger.ts  useSentryMetrics.ts  useSentryUser.ts  (+7 more)
config/: cspell.json  render.yaml  replit.nix
data/: Mobiles Dataset (2025) - Enhanced.csv  Mobiles Dataset (2025).csv  Mobiles_Dataset_Clean.csv  Mobiles_Dataset_Cleaned.csv  Mobiles_Dataset_Cleaned_backup_20251130_010608.csv  Mobiles_Dataset_Cleaned_report.json  Mobiles_Dataset_Cleaned_summary.json  Mobiles_Dataset_Feature_Engineered.csv  Mobiles_Dataset_Final.csv  Mobiles_Dataset_Final_fixes_report.json  Mobiles_Dataset_Normalized_Targets.csv  Mobiles_Dataset_Segmented.csv  clean_distillation_benchmark.json  clean_model_metadata.json  complete_image_collection_results.json  compression_benchmark.json  counterfactual_examples.json  dataset_analysis_results.json  dataset_audit_refresh.json  dataset_exploration_insights.json  dataset_summary.json  drift_monitoring_report.json  ensemble_neural_metrics.json  ensemble_oof_predictions.csv  ensemble_stacking_metrics.json  euro_price_scraping_progress.json  european_market_analysis.json  european_market_comprehensive_analysis.json  european_vs_global_trends.csv  explainability_ice_price_percentile_global.csv  explainability_pdp.json  explainability_shap_samples.json  explainability_shap_summary.json  feature_engineering_schema.json  greek_price_scraping_progress.json  gsmarena_collection_results.json  image_collection_results.json  missing_phones_report.csv  mobile_dataset_template.csv  multitask_auxiliary_metrics.json  (+16 more)
deployment/: .env.example  DEPLOYMENT_SUMMARY.md  Dockerfile  Dockerfile.nuxt  INTEGRATION_COMPLETE.md  QUICK_REFERENCE.md  README.md  backup.sh  deploy_production.sh  docker-compose.yml  health_check.sh  nginx.conf  python-api.service  verify_deployment.sh
docs/: ALL_MODELS_TRAINING.md  API_REFERENCE.md  BACKEND_URL_CONFIG.md  COMPONENTS_REFERENCE.md  COMPOSABLES_REFERENCE.md  CONSOLIDATED_PROJECT_STATUS.md  CSV_TEMPLATE_GUIDE.md  DAISYUI_COMPONENT_EXAMPLES.md  DAISYUI_MIGRATION_CHECKLIST.md  DAISYUI_MIGRATION_GUIDE.md  DAISYUI_MIGRATION_STATUS.md  DAISYUI_PAGES_STRUCTURE_SUGGESTIONS.md  DAISYUI_PAGE_PATTERNS.md  DAISYUI_QUICK_REFERENCE.md  DATABASE_REFERENCE.md  DATA_PIPELINE.md  DYNAMIC_BACKEND_DETECTION.md  ENVIRONMENT_SETUP.md  ERROR_TRACKING_SETUP.md  FILE_STRUCTURE.md  FILE_VERIFICATION.md  GITHUB_PR_EXTENSION.md  INDEX.md  MCP_SERVER_REFACTORING_PLAN.md  MIGRATION_PROGRESS.md  MIGRATION_SUMMARY.md  MISSING_FEATURES_IMPLEMENTATION.md  NEXT_STEPS.md  NUXT4_COMPONENTS_PLUGINS_REFERENCE.md  NUXT4_COMPOSABLES_PLUGINS_GUIDE.md  OPTIMIZATION.md  PAGES_ANALYSIS.md  PERFORMANCE_OPTIMIZATION.md  QUICK_REFERENCE.md  README.md  RECOMMENDED_MODULES_FOR_YOUR_APP.md  SCRAPING.md  SCREENSHOT_GUIDE.md  SCRIPTS_REFERENCE.md  SECURITY_CONFIGURATION.md  (+13 more)
domain/: index.ts
examples/: autoencoder_example.m  cnn_example.m  lstm_example.m  lstm_forecasting_example.m  mobiles_tabular_regression.m  (+7 more)
mcp-servers/todo-mcp-server/: mcp-config-example.json  pyproject.toml  todo_mcp.py
(+882 files in other folders)
